# ad5941

./: .gitignore  README.md
android-app/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/example/emgple52/: MainActivity.kt
android-app/app/src/main/java/com/example/emgple52/ble/: BleManager.kt
android-app/app/src/main/java/com/example/emgple52/data/: DownloadExporter.kt  FrameParser.kt  PstatParser.kt  Recorder.kt
android-app/app/src/main/java/com/example/emgple52/dsp/: Biquad.kt  FilterChain.kt  MetricsEngine.kt  Spectrum.kt
android-app/app/src/main/res/drawable/: card_bg.xml  device_thumb.xml  dot_gray.xml  dot_green.xml  ic_device.xml  ic_home.xml  ic_more.xml  ic_record.xml  ic_report.xml  inner_bg.xml  pill_bg.xml
android-app/app/src/main/res/layout/: activity_main.xml
android-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android-app/app/src/main/res/xml/: file_paths.xml
docs/: 사업화_마일스톤.md
firmware/: CMakeLists.txt  README.md  adiid.jlink  adiid2.jlink  app.overlay  connect.jlink  connect_slow.jlink  cpustate.jlink  diag.jlink  diag2.jlink  flash.jlink  live.jlink  pc.jlink  prj.conf  readmeas.jlink  readmem.jlink  readvars.jlink  reset.jlink  resetread.jlink  smoke.jlink  state.jlink  txcheck.jlink
firmware/src/: ad5940_port.c  cmd.c  cmd.h  main.c  pstat.h
firmware/src/ad5940lib/: ad5940.c
firmware/tools/: ble_caldbg.py  ble_cycles.py  full_suite.py  measure_mean.py
(+2 files in other folders)
